# download-bot-v2

./: .gitignore  Makefile  pyproject.toml
bot/: app.py  config.py
bot/db/: __init__.py  models.py  requests.py
bot/filters/: __init__.py  url_check.py
bot/handlers/: __init__.py
bot/handlers/basic/: __init__.py  download.py  mailing.py  start.py  statistic.py
bot/keyboards/: __init__.py  download.py  start.py
bot/middlewares/: anti_flood.py  registration.py
bot/utils/: __init__.py  callback_data_factories.py  finite_state_machine.py
bot/youtube/: __init__.py  youtube.py
