[tool.poetry]
name = "download-bot-v2"
version = "0.1.0"
description = "Telegram Download Bot"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
sqlalchemy = "^2.0.22"
redis = "^5.0.1"
isort = "^5.12.0"
black = "^23.10.1"
flake8 = "^6.1.0"
alembic = "^1.12.0"
asyncpg = "^0.28.0"
requests = "^2.31.0"

[tool.poetry.scripts]
bot = "bot.app:bot_run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
